--- a/REACT/covid/src/assets/css/style.css
+++ b/REACT/covid/src/assets/css/style.css
@@ -1,5 +1,9 @@
-.col-md-4{
+.col-md-3{
     border: 1px solid #ddd;
     padding: 2rem;
-    margin: 2rem;
+    margin: 0.5rem;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+.row{
+    padding: 2rem;
 }
