--- a/REACT/covid/src/assets/css/style.css
+++ b/REACT/covid/src/assets/css/style.css
@@ -1,7 +1,8 @@
-.col-md-3{
-    border: 1px solid #ddd;
+.col-md-4{
+    padding: 1rem;
+}
+.inner-card{
     padding: 2rem;
-    margin: 0.5rem;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 .row{
